Multithread Partner B Task
 High-performance multithreaded version using ExecutorService, Callable, and Futures.
    Runs faster than the single-threaded solution by:
    1) Using raw byte arrays for fast IO
    2) Uppercasing bytes in place (very efficient)
    3) Processing each file in parallel using a thread pool
    4) Writing the modified bytes back to the file